--- a/css/core-style.css
+++ b/css/core-style.css
@@ -553,7 +553,7 @@ img {
 /* :: 5.0 Sidebar Area CSS */
 
 .social-sidebar-area {
-    width: 120px;
+    width: 12%;
     height: 72%;
     background-color: transparent;
     position: fixed;
